# Patro

./: Cargo.toml  README.md
src/: main.rs
src/client/: default_client.rs  mod.rs
src/hamro_patro/: date.rs  errors.rs  mod.rs  upcoming_events.rs
src/http/: client.rs  errors.rs  http.rs  mod.rs  uri.rs
src/time_extra/: mod.rs  nepali_time.rs
src/tui/: date_events.rs  mod.rs
src/utils/: mod.rs  nep_month.rs  string_extras.rs  two_digit_str.rs
