[package]
name = "patro"
version = "0.1.0"
edition = "2021"
authors = ["drakulah"]
description = "A command line tool to view Nepali date, time and upcoming events"
license = "MIT"
readme = "README.md"
repository = "https://github.com/drakulah/Patro"
keywords = ["patro", "hamro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14"
hyper-rustls = "0.24"
serde_json = "1.0"
percent-encoding = "2"
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["cargo"] }
scraper = "0.18"
tokio = { version = "1", features = ["full"] }
